objects/MRS_Fields_Permission_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CustomerRemoteJobviewFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomerRemoteJobviewFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerRemoteJobviewPrime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomerRemoteJobviewPrime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DRW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FoundryRemoteJobviewFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FoundryRemoteJobviewFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FoundryRemoteJobviewPrime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FoundryRemoteJobviewPrime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrameMockupCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FrameMockupCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrameMockupFoundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FrameMockupFoundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDSOUTReviewCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDSOUTReviewCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GDSOUTReviewFoundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GDSOUTReviewFoundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewFoundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewFoundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewGlobalShuttle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewGlobalShuttle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewMDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewMDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewTDTIMPW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewTDTIMPW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewTapeoutAPPLICATIONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewTapeoutAPPLICATIONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESJobviewTapeoutCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESJobviewTapeoutCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESReceivedFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESReceivedFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MEBESReceivedPrime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MEBESReceivedPrime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendDataFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendDataFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendDataPrime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendDataPrime</label>
        <type>Checkbox</type>
    </fields>
    <label>MRS_Fields_Permission_Config</label>
</CustomObject>